--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"cloudinary": "^1.36.4",
 		"cookie-session": "^2.0.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
@@ -9,6 +10,7 @@
 		"jsonwebtoken": "^9.0.0",
 		"mongodb": "~4.0.1",
 		"mongoose": "^7.1.0",
+		"multer": "1.4.5-lts.1",
 		"nodemon": "^2.0.22",
 		"passport": "^0.5.3",
 		"passport-facebook": "^3.0.0",
