--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"passport": "^0.5.3",
 		"passport-facebook": "^3.0.0",
 		"passport-google-oauth2": "^0.2.0",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"y": "link:"
 	},
 	"name": "y",
 	"version": "1.0.0",
